added some refs to ch1 WP1

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -4,22 +4,21 @@
 
 
 Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal
-obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs {@dfoScienceAdvicePrecautionary202}. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html, DFO's implementation of the precautionary approach for Pacific salmon [@dfoCanadaPolicyConservation2005].
+obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html [@dfoCanadaPolicyConservation2005].
 
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities (DFO 2009). It is also generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumptions of that rate of population increase is reduced as density dependence weakens at low abundances. However, increased predation rates or inability to find mates at low abundances may actual reduce the the rate of population increase [@chenIncorporatingAlleeEffects2002a]. Failing to protect stocks above the LRP means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities (DFO 2009). Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumption that the rate of population increase is reduced as density dependence weakens below unfished equilbrium levels. However, increased predation rates or inability to find mates at very low abundances may reduce the the rate of population increase, creating allee effects [@chenIncorporatingAlleeEffects2002a]. LRPs are designated at levels above where these irreversible or only slowly reversible changes occur. <!--omit: Failing to protect stocks above the LRP  means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.-->
 
 LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. Operational control points are identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders.
 
 <!--CH side note:  DFO's Fisheries Sustainability checklist are typically management operational control points, and not biological LRPs per se-->
 
 
-<!--CH: moving intro to WSP, CUs and benchamrks up to here-->
+<!--CH: moved intro to WSP, CUs and benchamrks below and Ch2  here-->
 
-For Pacific salmon, Canada's Wild Salmon Policy, WSP, informs the development of LRPs and is DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). Biological benchmarks delineating three zones of status, green, amber, and red have been identified to represent zones of increasing conservation concern requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). <!--CH: I drafted text to address Sue's point. Should we include or does introduce complexities that are not highly relevant to our goals?   "Due to the differences in metrics of status used by WSP and COSEWIC, buffers have been challenging to identify and in practice red status from WSP assessments tends to align with threatened or endangered designations by COSEWIC (Grant, S. pers. comm.)."-->One recommended lower benchmark is spawner abundances resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
+For Pacific salmon, Canada's Wild Salmon Policy, WSP, is DFO's implementation of the Precautionary Approach Framework for Pacific salmon and informs the development of LRPs. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). Biological benchmarks delineating three zones of status, green, amber, and red have been identified to represent zones of increasing conservation concern requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). <!--CH: I drafted text to address Sue's point. However it introduces complexities that are not highly relevant to our goals, and I'm considering omitting. Thoughts?   "Due to the differences in metrics of status used by WSP and COSEWIC, buffers have been challenging to identify and in practice red status from WSP assessments tends to align with threatened or endangered designations by COSEWIC."-->One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
 
-Status assessments under the WSP generally integrate data across numerous dimensions of status, including spawner abundances, short and long-term trends, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  The multidimensional framework for defining biological units and their assessment under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [CSAS SAR on two WSP assessments], IFR coho [CSAS SAR on WSP assessments from 2014], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016], Skeena report [Anything in prep from Charmaine?], PSE [citation to PSF's Tech Report describing PSE]). 
-
+Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020, CSAS SAR on two WSP assessments], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single metrics, spawning abundances relative to abundance-based benchmarks have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and within (e.g., Barkley Sockeye Salmon [@chaputConsiderationsDefiningReference2012] and Skeena Sockeye (C. Carr-Harris pers. com.). 
 
 
 
