--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -399,6 +399,20 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\A26ES6NW\\Holtby and Ciruna - 2007 - Conservation Units for Pacific Salmon under the Wi.pdf}
 }
 
+@article{holtCautionsUsingPercentilebased2015,
+  title = {Cautions on Using Percentile-Based Benchmarks of Status for Data-Limited Populations of {{Pacific}} Salmon under Persistent Trends in Productivity and Uncertain Outcomes from Harvest Management},
+  author = {Holt, Carrie A. and Folkes, Michael J.P.},
+  year = {2015},
+  month = nov,
+  journal = {Fisheries Research},
+  volume = {171},
+  pages = {188--200},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2015.01.002},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\G2M7RGZB\\Holt and Folkes - 2015 - Cautions on using percentile-based benchmarks of s.pdf}
+}
+
 @techreport{holtEvaluationBenchmarksConservation2009,
   type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
   title = {Evaluation of {{Benchmarks}} for {{Conservation Units}} in {{Canada}}'s {{Wild Salmon Policy}}: Technical {{Documentation}}},
@@ -533,6 +547,14 @@
   abstract = {Fisheries managers use biological reference points (BRPs) as targets or limits on fishing and biomass to maintain productive levels of fish stock biomass. There are multiple ways to calculate BRPs when biological parameters are time varying. Using summer flounder (Paralichthys dentatus) as a case study, we investigated time-varying approaches in concert with climate-linked population models to understand the impact of environmentally driven variability in natural mortality, recruitment, and size-at-age on two commonly used BRPs {$\frac{1}{2}$}B0\dh t\TH{} and F35\%(t)]. We used the following two approaches to calculate time-varying BRPs: dynamic-BRP and moving-average-BRP. We quantified the variability and uncertainty of different climate dependencies and estimation approaches, attributed BRP variation to variation in life-history processes, and evaluated how using different approaches impacts estimates of stock status. Results indicate that the dynamic-BRP approach using the climate-linked natural mortality model produced the least variable reference points compared to others calculated. Summer flounder stock status depended on the estimation approach and climate model used. These results emphasize that understanding climate dependencies is important for summer flounder reference points and perhaps other species, and careful consideration is warranted when considering what time-varying approach to use, ideally based upon simulation studies within a proposed set of management procedures.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\XJ9S3WXK\\O’Leary et al. - 2020 - Comparison of multiple approaches to calculate tim.pdf}
+}
+
+@techreport{pacificsalmonfoundationMethodsAssessingStatus2020,
+  title = {Methods for {{Assessing Status}} and {{Trends}} in {{Pacific Salmon Conservation Units}} and Their {{Freshwater Habitats}}},
+  author = {Pacific Salmon Foundation},
+  year = {2020},
+  number = {The Pacific Salmon Foundation, Vancouver BC, Canada, version 1.0},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\T7XPHSG9\\lib_459.pdf}
 }
 
 @article{pestalUpdatedMethodsAssessing2012,
