--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -7,7 +7,7 @@ Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisio
 obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html [@dfoCanadaPolicyConservation2005].
 
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities (DFO 2009). Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumption that the rate of population increase is reduced as density dependence weakens below unfished equilbrium levels. However, increased predation rates or inability to find mates at very low abundances may reduce the the rate of population increase, creating allee effects [@chenIncorporatingAlleeEffects2002a]. LRPs are designated at levels above where these irreversible or only slowly reversible changes occur. <!--omit: Failing to protect stocks above the LRP  means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.-->
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumption that the rate of population increase is reduced as density dependence weakens below unfished equilbrium levels. However, increased predation rates or inability to find mates at very low abundances may reduce the the rate of population increase, creating allee effects [@chenIncorporatingAlleeEffects2002a]. LRPs are designated at levels above where these irreversible or only slowly reversible changes occur. <!--omit: Failing to protect stocks above the LRP  means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.-->
 
 LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. Operational control points are identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders.
 
@@ -18,7 +18,7 @@ LRPs are biologically based values that are separate from management measures, b
 
 For Pacific salmon, Canada's Wild Salmon Policy, WSP, is DFO's implementation of the Precautionary Approach Framework for Pacific salmon and informs the development of LRPs. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). Biological benchmarks delineating three zones of status, green, amber, and red have been identified to represent zones of increasing conservation concern requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). <!--CH: I drafted text to address Sue's point. However it introduces complexities that are not highly relevant to our goals, and I'm considering omitting. Thoughts?   "Due to the differences in metrics of status used by WSP and COSEWIC, buffers have been challenging to identify and in practice red status from WSP assessments tends to align with threatened or endangered designations by COSEWIC."-->One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
 
-Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020, CSAS SAR on two WSP assessments], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single metrics, spawning abundances relative to abundance-based benchmarks have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and within (e.g., Barkley Sockeye Salmon [@chaputConsiderationsDefiningReference2012] and Skeena Sockeye (C. Carr-Harris pers. com.). 
+Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single metrics, spawning abundances relative to abundance-based benchmarks have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and within (e.g., Barkley sockeye salmon [@chaputConsiderationsDefiningReference2012] and Skeena River sockeye salmon (C. Carr-Harris pers. com.). 
 
 
 
@@ -32,27 +32,25 @@ CH: I think we should keep benchmarks as biological values as defined in the WSP
 
 <!--CH I moved the reference to other policies up, and am trying to differentiate LRPs from OCPs, though LRPs can inform OCPs (and are used in them sometimes) I'd like to distinguish them at least theoretically, so added some text explicitly on this above and made some revisions here--> 
 
-LRPs are commonly used in the assessment and management for marine fisheries where they are used to identify and communicate statuses and inform harvest control rules. Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of the PA policy in 2006. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 15 years after the publication of the PA policy, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the PA policy, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international Policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
+LRPs are commonly used in the assessment and management for marine fisheries where they are used to identify and communicate statuses and inform harvest control rules. Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of DFO's Precautionary Approach Framework in 2009. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 12 years after the publication of DFO's Precautionary Approach Framework, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the Framework, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international Policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
 
 
 
-For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. <!--CH: check this reference/sentence-->The review was focused on the applications of lower benchmarks at the Conservation Unit (CU) level, providing a comprehensive overview of the different methods available to assess CU status and their historical applications. @chaputConsiderationsDefiningReference2012 also provide considerations on managing multiple stocks as unit, e.g. multiple CUs as an SMU, highlighting that mixed stock management requires more precautionary benchmarks to ensure that all sub units remain above their lower benchmarks.
-
-
-<!--CH combine this pgh below with mention of multidimensional app for WSP assessetns above-->
- LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi-dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs. In Canada,  multi-dimensional managements benchmarks have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab reference points incorporate information from CPUE estimates, egg clutches and discards to extends the scope of precaution and efficacy of the management framework. In the companion case study paper (Holt et al. in review), the multi-dimensional assessment approach introduced by (cite Pestal tech report) is used to approximate the integrated WSP status assessments for Pacific salmon CUs.  
+For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. While biological assessments under the WSP are implemented at the scale of Conservation Unit, CU, fisheries management often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of  individual CUs breaching their lower benchmark, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
 
 
 
-
-<!--
-CW: Are there any examples of integrates assessments for Pink salmon? I could not find any. 
-CW: Do you know of any additional WSP assessment that could be added to the list above?
-
--->
+Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to marine fisheries. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs. In Canada,  multidimensional reference points have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab LRPs incorporate information from CPUE estimates, egg clutches and discards to extend the scope of precaution and efficacy of the management framework. For Pacific salmon, the multidimensional assessment approach introduced by (Pestal et al.) is used to approximate the integrated WSP status assessments for Pacific salmon CUs (Holt et al. in review).  
 
 
- Although the traditional application of the precautionary approach for the management of Pacific salmon has been focused on setting lower management benchmarks for individual salmon CUs [dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower management benchmarks. The present work expands on the previous work by providing guidance on establishing LRPs for management of Pacific salmon SMUs. 
+The definition of serious harm which includes impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009], depends to some extent on the time-frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or traditional knowledge demonstrates that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @@mckechnieArchaeologicalDataProvide2014]. The inclusion of traditional ecological knowledge is more commmon in the development of target reference points for fisheries management that identify long-term targets based on biological, social, and economic considerations [@caddyReferencePointsFisheries1995], than in LRPs. <!--CH: moved Two-eyed Seeing to chapter 6-->
+
+
+
+
+
+
+Although the traditional application of the precautionary approach for the management of Pacific salmon has been focused on setting lower management benchmarks for individual salmon CUs [dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower management benchmarks. The present work expands on the previous work by providing guidance on establishing LRPs for management of Pacific salmon SMUs. 
 
 
 Scales of Pacific salmon assessment reporting
@@ -69,8 +67,10 @@ Scales of Pacific salmon assessment reporting
 
 -- Enhancement not included
 
+
 <!--CH notes to add  
 •	Intro- maintaining CUs, portfolio effects to add resilience to threats over the long term, maintaining underlying biodiversity is important so it can buffer production during periods of declining productivity, and also ensure we have the diversity to maintain a species through environmental change
+- SKeena paper on detriortaion of portfolio effects, price et al. 2021
 •	Intro: add section on scoping, as outlines in TWG Mtg #16 pptx. Also, do any of the principles from the ppt need to be brought into the paper?
 •	Intro when defining Lower Benchmark: “the lower benchmark is defined as a level of abundance high enough to ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction” : SG: In practice this hasn’t been applied really. In the end a Red status CU largely aligns with an EN COSEWIC DU, etc. etc. I have looked at these comparsisons and really both WSP and COSEWIC align, we are not really creating any buffers b/w COSEWIC listing…so I would delete this as it just has confused things all along. 
 o	“We can revise the background to say that methods have been developed that can calculate benchmarks for all CUs; however, DFO does not yet have a formal CU status for most CUs outside of select Fraser / Southern BC stocks.  We can also spend some time better describing WSP status assessments, as well as how they link to the aggregate LRP requirements of the fisheries act to help reduce the disconnect.    
