--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -79,3 +79,5 @@ old notes on time-varying parameters
  @zhangAccountingNonstationaryStock2021 illustrates the effects of time-varying recruitment parameters on MSY-based reference points for iteroparous fish stocks (cod and plaice). They highlight that more precautionary benchmarks are necessary to account for the parameter uncertainty in highly dynamic ecosystems. However, they observed that effects on reference points depend on the magnitude and structure of the stochasticity in stock-recruitment relationships, therefore they recommend case specific simulation studies be performed to identify explicit impacts on MSY-based reference points.
 
 -->
+
+While the inclusion of traditional ecological knowledge is more commmon in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], than in LRPs, there may be value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2020 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both indigenous and western science perspectives are valued though the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By understanding serious harm from both indigenous and mainstream scientific perspectives, LRPs may better reflect underlying biological processes.
