added some notes from TESA wokrhop

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -66,9 +66,8 @@ Scales of Pacific salmon assessment reporting
 -	Project Goal: Provide analysts and managers with methodological tools and guidance to identify LRPs for SMUs.   Having guidelines that have been reviewed and published through CSAS will provide a scientific basis for individual applications of the methodology throughout the Pacific Region in consultation with Indigenous groups and stakeholders, and ensure consistency in application.
 
 
--risks of ignoring CUs "The more divergent MU versus BUmore divergent MU versus BU……
-increased bias in reference points, misleading trends from indicators, risk of serial depletion, reduced ability to apply "traditional" of serial depletion, reduced ability to apply "traditional" view view of LRPs as of LRPs as thresholds to serious thresholds to serious harm …harm …
-even if overall harvest strategy aimed to achieve PA intent
+-risks of ignoring CUs Julie Marentette pptx for TESA LRP workshop "The more divergent MU versus BU (biological unit)……
+increased bias in reference points, misleading trends from indicators, risk of serial depletion, reduced ability to apply "traditional" of serial depletion, reduced ability to apply "traditional" view of LRPs as thresholds to serious harm even if overall harvest strategy aimed to achieve PA intent
 
 "
 -- Enhancement not included
